--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <!-- Хедер с логотипом -->
                 <header class="mb-12">
                     <div class="flex items-center space-x-3">
-                        <img src="https://i.imgur.com/AKA2mMV.png" alt="EchoPortVPN Logo" class="h-12 w-auto">
+                        <img src="images/logo.png" alt="EchoPortVPN Logo" class="h-12 w-auto">
                         <div class="flex flex-col">
                             <h1 class="font-bold text-2xl">EchoPortVPN</h1>
                             <span class="text-text-muted text-sm">echoport.ru</span>
