--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
             transform: translateY(-2px);
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#0A3D62">
+    <meta name="theme-color" content="#0A3D62">
 </head>
 
 <body class="font-sans text-text-light">
