--- a/index.html
+++ b/index.html
@@ -208,9 +208,17 @@
                     </section>
                 </main>
                 
-                <!-- Подвал (Footer) -->
-                <footer class="text-center pt-4">
-                    <p class="text-text-muted text-sm">© EchoPortVPN 2025</p>
+                <!-- Обновленный подвал (Footer) для index.html -->
+                <footer class="border-t border-gray-700 pt-6 mt-10">
+                    <div class="flex flex-col md:flex-row justify-between items-center">
+                        <div class="mb-4 md:mb-0">
+                            <p class="text-text-muted text-sm">© EchoPortVPN 2025</p>
+                        </div>
+                        <div class="flex space-x-6">
+                            <a href="/" class="text-text-muted hover:text-text-light text-sm">Главная</a>
+                            <a href="/privacy-policy.html" class="text-text-muted hover:text-text-light text-sm">Политика конфиденциальности</a>
+                        </div>
+                    </div>
                 </footer>
             </div>
         </div>
